# Claude-Code

./: README.md
cargill-pptx-converter/: .gitignore  CARGILL_COMPLETE_KNOWLEDGE_BASE.md  CHATGPT_GPT_BUILDER.md  README.md  cargill_agent_implementation.md  cargill_brand_reference_checklist.md  cargill_brand_specifications.md  cargill_branding_workflow.md  cargill_quick_start_guide.md  pyproject.toml
cargill-pptx-converter/config/: workflow_config.yaml
cargill-pptx-converter/src/: __init__.py
cargill-pptx-converter/src/agents/: base.py  brand_compliance.py  chart_builder.py  content_extractor.py  pptx_builder.py  quality_assurance.py  slide_architect.py  visual_designer.py
cargill-pptx-converter/src/brand/: constants.py  palette.py  terminology.py
cargill-pptx-converter/src/cli/: main.py
cargill-pptx-converter/src/extractors/: base.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py  registry.py  tabular_extractor.py  text_extractor.py
cargill-pptx-converter/src/orchestrator/: pipeline.py
cargill-pptx-converter/src/schemas/: chart.py  compliance.py  content.py  run_state.py  slide.py
strategy-workflow-agent/: .env.example  .gitignore  README.md  pyproject.toml
strategy-workflow-agent/chatgpt_custom_gpt/: DEPLOYMENT_GUIDE.md  README.md  conversation_starters.md  gpt_configuration.json  system_instructions.md
strategy-workflow-agent/config/: workflow_config.yaml
strategy-workflow-agent/src/: __init__.py
strategy-workflow-agent/src/agents/: __init__.py  base.py  context_analyzer.py  feedback_processor.py  goal_generator.py  initiative_designer.py  learning_optimizer.py  output_generator.py  pillar_synthesizer.py  resource_planner.py  risk_assessor.py  talent_assessment_specialist.py  timeline_optimizer.py  validator.py  vision_extractor.py
strategy-workflow-agent/src/cli/: __init__.py  main.py
strategy-workflow-agent/src/feedback/: __init__.py
strategy-workflow-agent/src/orchestrator/: __init__.py  gates.py  graph.py  state.py
strategy-workflow-agent/src/schemas/: __init__.py  feedback.py  run_state.py  strategy.py  talent_assessment.py
strategy-workflow-agent/src/utils/: __init__.py  io.py  logging.py
strategy-workflow-agent/tests/: test_agents.py  test_schemas.py  test_workflow.py
tech-competency-agent/: .env.example  .gitignore  CHATGPT_GPT_BUILDER_GUIDE.md  FINAL_SUMMARY.md  GPT_CREATION_INSTRUCTIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_WORKFLOW_GUIDE.md  UPGRADE_PLAN_v1.3.md  install.sh  pyproject.toml  test_e2e.py  verify_setup.py  view_instructions.html
tech-competency-agent/chatgpt-gpt/: CHATGPT_GPT_SYSTEM_INSTRUCTIONS.md  GPT_CREATION_GUIDE.md  README.md  job_family_competency_model_schema.yaml
tech-competency-agent/chatgpt-gpt/example_models/: IT_job_family_competency_model.yaml
tech-competency-agent/chatgpt-gpt/prompt_templates/: step1_job_analysis.md  step2_model_selection.md  step3_responsibility_mapping.md  step4_customization.md  step5_validation.md  step6_criticality_ranking.md  step7_output_generation.md
tech-competency-agent/config/: competency_format.yaml  thresholds.yaml  workflow_config.yaml
tech-competency-agent/config/template_specs/: default_template.yaml
tech-competency-agent/data/input/: create_sample_data.py
tech-competency-agent/docs/: file_analysis_guide.md  knowledge_base_guide.md
tech-competency-agent/docs/agent_prompts/: README.md
tech-competency-agent/docs/scoring_rubrics/: criticality_scoring.md
tech-competency-agent/docs/validation_rules/: quality_gates.md
tech-competency-agent/src/: __init__.py
tech-competency-agent/src/agents/: __init__.py  base.py  benchmark_researcher.py  competency_mapping.py  criticality_ranker.py  job_ingestion.py  normalizer.py  overlap_auditor.py  overlap_remediator.py  template_populator.py
tech-competency-agent/src/cli/: __init__.py  main.py
tech-competency-agent/src/orchestrator/: __init__.py  gates.py  graph.py  state.py
tech-competency-agent/src/schemas/: __init__.py  audit.py  competency.py  job.py  mapping.py  ranking.py  run_state.py
tech-competency-agent/tests/: __init__.py  conftest.py
(+11 files in other folders)
