[tool.poetry]
name = "cargill-pptx-converter"
version = "0.1.0"
description = "Convert documents to professional Cargill-branded PPTX presentations"
authors = ["Cargill Brand Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-pptx = "^1.0.0"
python-docx = "^1.1.0"
pypdf = "^4.0.0"
openpyxl = "^3.1.0"
pandas = "^2.2.0"
Pillow = "^10.2.0"
matplotlib = "^3.8.0"
pydantic = "^2.0.0"
click = "^8.1.0"
pyyaml = "^6.0"
markdown = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
cargill-pptx = "src.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
