[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-workflow-agent"
version = "1.0.0"
description = "Multi-Agent Strategic Planning Workflow with Learning Feedback Loops"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Strategy Workflow Team"}
]
keywords = ["multi-agent", "strategy", "workflow", "langgraph", "feedback-loop", "ai"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "pandas>=2.0",
    "openpyxl>=3.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.scripts]
strategy-workflow = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
